watcher.log
Traceback (most recent call last):
  File "/root/zephyr/watch_screenshots.py", line 8, in <module>
    from analyze_and_respond import analyze_and_comment
  File "/root/zephyr/analyze_and_respond.py", line 74
    # Rest der Funktion wie zuvor...
                                    ^
SyntaxError: expected 'except' or 'finally' block
Traceback (most recent call last):
  File "/root/zephyr/watch_screenshots.py", line 8, in <module>
    from analyze_and_respond import analyze_and_comment
  File "/root/zephyr/analyze_and_respond.py", line 74
    # Rest der Funktion wie zuvor...
                                    ^
SyntaxError: expected 'except' or 'finally' block
Traceback (most recent call last):
  File "/root/zephyr/watch_screenshots.py", line 8, in <module>
    from analyze_and_respond import analyze_and_comment
  File "/root/zephyr/analyze_and_respond.py", line 74
    # Rest der Funktion wie zuvor...
                                    ^
SyntaxError: expected 'except' or 'finally' block
Traceback (most recent call last):
  File "/root/zephyr/watch_screenshots.py", line 8, in <module>
    from analyze_and_respond import analyze_and_comment
  File "/root/zephyr/analyze_and_respond.py", line 74
    # Rest der Funktion wie zuvor...
                                    ^
SyntaxError: expected 'except' or 'finally' block
Traceback (most recent call last):
  File "/root/zephyr/watch_screenshots.py", line 8, in <module>
    from analyze_and_respond import analyze_and_comment
  File "/root/zephyr/analyze_and_respond.py", line 74
    # Rest der Funktion wie zuvor...
                                    ^
SyntaxError: expected 'except' or 'finally' block
Traceback (most recent call last):
  File "/root/zephyr/watch_screenshots.py", line 8, in <module>
    from analyze_and_respond import analyze_and_comment
  File "/root/zephyr/analyze_and_respond.py", line 74
    # Rest der Funktion wie zuvor...
                                    ^
SyntaxError: expected 'except' or 'finally' block
Traceback (most recent call last):
  File "/root/zephyr/watch_screenshots.py", line 8, in <module>
    from analyze_and_respond import analyze_and_comment
  File "/root/zephyr/analyze_and_respond.py", line 74
    # Rest der Funktion wie zuvor...
                                    ^
SyntaxError: expected 'except' or 'finally' block
